--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header class="fixed top-0 left-0 right-0 z-50 glass-header border-b border-slate-200 dark:border-slate-800">
         <div class="max-w-7xl mx-auto px-5 h-16 flex items-center justify-between">
             <a href="#/" class="flex items-center gap-2">
-                <img src="Logo.png" alt="Staffona Logo" class="h-20 w-auto">
+                <img src="Logo.png" alt="Staffona Logo" class="h-20 w-auto" dark:brightness-0 dark:invert>
             
             </a>
 
@@ -492,7 +492,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-10 mb-12">
                 <div class="col-span-1 md:col-span-2">
                     <div class="flex items-center gap-2 mb-6">
-                        <img src="Logo.png" alt="Staffona Logo" class="h-20 w-auto">
+                        <img src="Logo.png" alt="Staffona Logo" class="h-20 w-auto" dark:brightness-0 dark:invert>
 
                     </div>
                     <p class="text-slate-500 dark:text-slate-400 text-sm leading-relaxed max-w-xs mb-6">Excellence in HR and business process outsourcing for enterprises worldwide. Built on trust, delivered with precision.</p>
