--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header class="fixed top-0 left-0 right-0 z-50 glass-header border-b border-slate-200 dark:border-slate-800">
         <div class="max-w-7xl mx-auto px-5 h-16 flex items-center justify-between">
             <a href="#/" class="flex items-center gap-2">
-                <img src="Logo.png" alt="Staffona Logo" class="h-20 w-auto" dark:brightness-0 dark:invert>
+                <img dark:brightness-0 dark:invert src="Logo.png" alt="Staffona Logo" class="h-20 w-auto">
             
             </a>
 
@@ -78,7 +78,7 @@
             <div class="p-6 flex flex-col h-full">
                 <div class="flex justify-between items-center mb-12">
                     <a href="#/" class="flex items-center gap-2" onclick="closeMenu()">
-                        <img src="Logo.png" alt="Staffona Logo" class="h-20 w-auto dark:invert">
+                        <img dark:brightness-0 dark:invert src="Logo.png" alt="Staffona Logo" class="h-20 w-auto dark:invert">
 
                     </a>
                     <button class="p-2" onclick="closeMenu()">
