--- a/index.html
+++ b/index.html
@@ -35,13 +35,20 @@
         };
     </script>
     <link rel="stylesheet" href="style.css">
+    <style>
+  /* This rule forces the logo to turn white when Dark Mode is active */
+  html.dark #main-logo, 
+  .dark #main-logo {
+      filter: brightness(0) invert(1) !important;
+  }
+</style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 font-sans antialiased overflow-x-hidden min-h-screen flex flex-col">
     <!-- Navbar -->
     <header class="fixed top-0 left-0 right-0 z-50 glass-header border-b border-slate-200 dark:border-slate-800">
         <div class="max-w-7xl mx-auto px-5 h-16 flex items-center justify-between">
             <a href="#/" class="flex items-center gap-2">
-                <img dark:brightness-0 dark:invert src="Logo.png" alt="Staffona Logo" class="h-20 w-auto">
+                <img dark:brightness-0 dark:invert id="main-logo" src="Logo.png" alt="Staffona Logo" class="h-20 w-auto">
             
             </a>
 
@@ -78,7 +85,7 @@
             <div class="p-6 flex flex-col h-full">
                 <div class="flex justify-between items-center mb-12">
                     <a href="#/" class="flex items-center gap-2" onclick="closeMenu()">
-                        <img dark:brightness-0 dark:invert src="Logo.png" alt="Staffona Logo" class="h-20 w-auto dark:invert">
+                        <img dark:brightness-0 dark:invert id="main-logo" src="Logo.png" alt="Staffona Logo" class="h-20 w-auto dark:invert">
 
                     </a>
                     <button class="p-2" onclick="closeMenu()">
@@ -492,7 +499,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-10 mb-12">
                 <div class="col-span-1 md:col-span-2">
                     <div class="flex items-center gap-2 mb-6">
-                        <img src="Logo.png" alt="Staffona Logo" class="h-20 w-auto" dark:brightness-0 dark:invert>
+                        <img id="main-logo" src="Logo.png" alt="Staffona Logo" class="h-20 w-auto" dark:brightness-0 dark:invert>
 
                     </div>
                     <p class="text-slate-500 dark:text-slate-400 text-sm leading-relaxed max-w-xs mb-6">Excellence in HR and business process outsourcing for enterprises worldwide. Built on trust, delivered with precision.</p>
