--- a/index.html
+++ b/index.html
@@ -509,10 +509,10 @@
                     </div>
                 </div>
                 <div class="bg-white dark:bg-slate-800 p-8 sm:p-12 rounded-[2.5rem] shadow-2xl border border-slate-100 dark:border-slate-700">
-                    <form id="contact-form" class="space-y-6">
+                    <form action="https://formspree.io/f/xkovjgaq" method="POST" id="contact-form" class="space-y-6">
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
-                            <div><label class="block text-sm font-bold text-slate-700 dark:text-slate-300 mb-2" for="name">Full Name</label><input class="w-full bg-slate-50 dark:bg-slate-900 border-none rounded-xl p-4 focus:ring-2 focus:ring-primary dark:text-white" id="name" placeholder="John Doe" type="text" required></div>
-                            <div><label class="block text-sm font-bold text-slate-700 dark:text-slate-300 mb-2" for="company">Company</label><input class="w-full bg-slate-50 dark:bg-slate-900 border-none rounded-xl p-4 focus:ring-2 focus:ring-primary dark:text-white" id="company" placeholder="Acme Corp" type="text" required></div>
+                            <div><label class="block text-sm font-bold text-slate-700 dark:text-slate-300 mb-2" for="text">Full Name</label><input class="w-full bg-slate-50 dark:bg-slate-900 border-none rounded-xl p-4 focus:ring-2 focus:ring-primary dark:text-white" id="name" placeholder="John Doe" type="text" required></div>
+                            <!-- div><label class="block text-sm font-bold text-slate-700 dark:text-slate-300 mb-2" for="company">Company</label><input class="w-full bg-slate-50 dark:bg-slate-900 border-none rounded-xl p-4 focus:ring-2 focus:ring-primary dark:text-white" id="company" placeholder="Acme Corp" type="text" required></div-->
                         </div>
                         <div><label class="block text-sm font-bold text-slate-700 dark:text-slate-300 mb-2" for="email">Work Email</label><input class="w-full bg-slate-50 dark:bg-slate-900 border-none rounded-xl p-4 focus:ring-2 focus:ring-primary dark:text-white" id="email" placeholder="john@company.com" type="email" required></div>
                         <div><label class="block text-sm font-bold text-slate-700 dark:text-slate-300 mb-2" for="subject">Subject</label><select class="w-full bg-slate-50 dark:bg-slate-900 border-none rounded-xl p-4 focus:ring-2 focus:ring-primary dark:text-white" id="subject"><option>HR Outsourcing</option><option>Business Support</option><option>Recruitment Services</option><option>General Inquiry</option></select></div>
