--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </button>
             </div>
         </div>
-
+    </header>
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu" class="fixed inset-0 z-[60] bg-white dark:bg-background-dark transform translate-x-full transition-transform duration-300 ease-in-out md:hidden">
             <div class="p-6 flex flex-col h-full">
