Update index.html remove fake numbers

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                         <h2 class="font-display text-2xl font-bold mb-6">Our Mission</h2>
                         <p class="text-blue-100 text-2xl font-light italic leading-relaxed">"To redefine human resource management by delivering innovative, compliant, and people-centric solutions that catalyze sustainable business success."</p>
                         <div class="mt-12 grid grid-cols-2 gap-6">
-                            <div class="bg-white/10 p-6 rounded-xl backdrop-blur-sm border border-white/10"><div class="text-3xl font-bold">2+</div><div class="text-sm text-blue-200">Clients Served</div></div>
-                            <div class="bg-white/10 p-6 rounded-xl backdrop-blur-sm border border-white/10"><div class="text-3xl font-bold">98%</div><div class="text-sm text-blue-200">Compliance Rate</div></div>
+                            <!-- div class="bg-white/10 p-6 rounded-xl backdrop-blur-sm border border-white/10"><div class="text-3xl font-bold">2+</div><div class="text-sm text-blue-200">Clients Served</div></div-->
+                            <!-- div class="bg-white/10 p-6 rounded-xl backdrop-blur-sm border border-white/10"><div class="text-3xl font-bold">98%</div><div class="text-sm text-blue-200">Compliance Rate</div></div-->
                         </div>
                     </div>
                 </div>
@@ -444,8 +444,8 @@
                 <p class="text-slate-600 dark:text-slate-400 text-xl leading-relaxed max-w-3xl">Empowering businesses with strategic HR outsourcing and seamless operational support tailored for global growth.</p>
             </section>
             <section class="px-5 grid grid-cols-1 md:grid-cols-2 gap-6 max-w-7xl mx-auto mb-20">
-                <div class="bg-primary p-10 rounded-[2rem] text-white shadow-2xl relative overflow-hidden group"><div class="relative z-10"><div class="text-6xl font-bold mb-4 group-hover:scale-110 transition-transform inline-block">15+</div><div class="text-lg uppercase tracking-widest font-bold opacity-80">Years Experience</div></div><div class="absolute -bottom-10 -right-10 w-40 h-40 bg-white/10 rounded-full blur-3xl"></div></div>
-                <div class="bg-secondary p-10 rounded-[2rem] text-white shadow-2xl relative overflow-hidden group"><div class="relative z-10"><div class="text-6xl font-bold mb-4 group-hover:scale-110 transition-transform inline-block">500+</div><div class="text-lg uppercase tracking-widest font-bold opacity-80">Global Clients</div></div><div class="absolute -bottom-10 -right-10 w-40 h-40 bg-white/10 rounded-full blur-3xl"></div></div>
+                <!--div class="bg-primary p-10 rounded-[2rem] text-white shadow-2xl relative overflow-hidden group"><div class="relative z-10"><div class="text-6xl font-bold mb-4 group-hover:scale-110 transition-transform inline-block">15+</div><div class="text-lg uppercase tracking-widest font-bold opacity-80">Years Experience</div></div><div class="absolute -bottom-10 -right-10 w-40 h-40 bg-white/10 rounded-full blur-3xl"></div></div-->
+                <!--div class="bg-secondary p-10 rounded-[2rem] text-white shadow-2xl relative overflow-hidden group"><div class="relative z-10"><div class="text-6xl font-bold mb-4 group-hover:scale-110 transition-transform inline-block">500+</div><div class="text-lg uppercase tracking-widest font-bold opacity-80">Global Clients</div></div><div class="absolute -bottom-10 -right-10 w-40 h-40 bg-white/10 rounded-full blur-3xl"></div></div-->
             </section>
             <div class="space-y-24 max-w-7xl mx-auto px-5 pb-24">
                 <section class="flex flex-col md:flex-row gap-16 items-center">
