Update index.html removing more incorrect data

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                         </div>
                         <div class="absolute top-0 right-0 w-64 h-64 bg-white/5 rounded-full -mr-20 -mt-20 blur-3xl"></div>
                     </div>
-                    <p class="mt-8 text-sm text-slate-500 dark:text-slate-500">Trusted by 50+ regional enterprises.</p>
+                    <!-- p class="mt-8 text-sm text-slate-500 dark:text-slate-500">Trusted by 50+ regional enterprises.</p-->
                 </div>
             </div>
         </section>
