Remove the Elizabeth Chen quote
Remove fake quote of named : Elizabeth Chen

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     </div>
                 </div>
             </section>
-            <section class="px-5 py-24">
+            <!--section class="px-5 py-24">
                 <div class="max-w-4xl mx-auto bg-slate-50 dark:bg-slate-900 rounded-[3rem] p-12 border border-slate-100 dark:border-slate-800 shadow-xl relative overflow-hidden">
                     <span class="material-symbols-outlined absolute top-10 right-10 text-slate-200 dark:text-slate-800 text-[120px] opacity-50">format_quote</span>
                     <div class="relative z-10">
@@ -344,7 +344,7 @@
                         <p class="text-slate-600 dark:text-slate-400 text-2xl italic leading-relaxed pl-4 border-l-4 border-secondary">"In today's landscape, HR isn't just about administration—it's about building a fortress of compliance and a culture of excellence. We're here to be that foundation for you."</p>
                     </div>
                 </div>
-            </section>
+        </section-->
             <section class="px-5 py-24 text-center">
                 <h2 class="font-display text-4xl font-bold mb-6 text-slate-900 dark:text-white">Ready to elevate your HR?</h2>
                 <p class="text-slate-600 dark:text-slate-400 mb-10 text-lg max-w-xl mx-auto">Let's discuss how Staffona can support your business growth.</p>
