--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                             <div class="w-16 h-16 bg-white dark:bg-slate-700 rounded-xl flex items-center justify-center shadow-sm mb-8 group-hover:scale-110 group-hover:bg-primary group-hover:text-white transition-all text-primary dark:text-secondary-bright">
                                 <span class="material-symbols-outlined text-[32px]">hub</span>
                             </div>
-                            <h3 class="font-display text-2xl font-bold mb-4 text-slate-900 dark:text-white">ERP Systems</h3>
-                            <p class="text-slate-600 dark:text-slate-400 text-base leading-relaxed mb-8">Implementation and management of world-class Enterprise Resource Planning systems for data-driven decisions.</p>
+                            <h3 class="font-display text-2xl font-bold mb-4 text-slate-900 dark:text-white">Recruitment</h3>
+                            <p class="text-slate-600 dark:text-slate-400 text-base leading-relaxed mb-8">We support companies in building local teams efficiently.</p>
                             <a href="#/services" class="text-secondary font-bold text-sm inline-flex items-center group/link">
                                 LEARN MORE
                                 <span class="material-symbols-outlined text-[18px] ml-2 group-hover/link:translate-x-1 transition-transform">arrow_forward</span>
@@ -404,14 +404,14 @@
                     <div class="flex flex-col md:flex-row gap-10">
                         <div class="md:w-1/3">
                             <div class="w-16 h-16 bg-indigo-50 dark:bg-indigo-900/30 text-indigo-600 dark:text-indigo-400 rounded-2xl flex items-center justify-center mb-6 shadow-sm group-hover:scale-110 transition-transform"><span class="material-symbols-outlined text-[28px]">database</span></div>
-                            <h2 class="text-3xl font-bold text-primary dark:text-white leading-tight mb-4">ERP & Workforce Systems</h2>
-                            <p class="text-slate-600 dark:text-slate-400 text-lg">Modernizing your workforce with cloud-based enterprise solutions and automated workflows.</p>
+                            <h2 class="text-3xl font-bold text-primary dark:text-white leading-tight mb-4">Recruitment</h2>
+                            <p class="text-slate-600 dark:text-slate-400 text-lg">We support companies in building local teams efficiently.</p>
                         </div>
                         <div class="md:w-2/3 grid grid-cols-1 sm:grid-cols-2 gap-6">
-                            <div class="flex items-start gap-3 p-4 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-slate-100 dark:border-slate-800"><span class="material-symbols-outlined text-secondary text-[18px] shrink-0 mt-1">check_circle</span><span class="text-slate-700 dark:text-slate-300 font-medium">Custom ERP implementation</span></div>
-                            <div class="flex items-start gap-3 p-4 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-slate-100 dark:border-slate-800"><span class="material-symbols-outlined text-secondary text-[18px] shrink-0 mt-1">check_circle</span><span class="text-slate-700 dark:text-slate-300 font-medium">Time & attendance automation</span></div>
-                            <div class="flex items-start gap-3 p-4 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-slate-100 dark:border-slate-800"><span class="material-symbols-outlined text-secondary text-[18px] shrink-0 mt-1">check_circle</span><span class="text-slate-700 dark:text-slate-300 font-medium">Digital employee self-service</span></div>
-                            <div class="flex items-start gap-3 p-4 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-slate-100 dark:border-slate-800"><span class="material-symbols-outlined text-secondary text-[18px] shrink-0 mt-1">check_circle</span><span class="text-slate-700 dark:text-slate-300 font-medium">Data analytics & reporting</span></div>
+                            <div class="flex items-start gap-3 p-4 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-slate-100 dark:border-slate-800"><span class="material-symbols-outlined text-secondary text-[18px] shrink-0 mt-1">check_circle</span><span class="text-slate-700 dark:text-slate-300 font-medium">Talent sourcing & screening</span></div>
+                            <div class="flex items-start gap-3 p-4 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-slate-100 dark:border-slate-800"><span class="material-symbols-outlined text-secondary text-[18px] shrink-0 mt-1">check_circle</span><span class="text-slate-700 dark:text-slate-300 font-medium">Salary benchmarking</span></div>
+                            <div class="flex items-start gap-3 p-4 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-slate-100 dark:border-slate-800"><span class="material-symbols-outlined text-secondary text-[18px] shrink-0 mt-1">check_circle</span><span class="text-slate-700 dark:text-slate-300 font-medium">Dedicated recruiter support</span></div>
+                            <div class="flex items-start gap-3 p-4 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-slate-100 dark:border-slate-800"><span class="material-symbols-outlined text-secondary text-[18px] shrink-0 mt-1">check_circle</span><span class="text-slate-700 dark:text-slate-300 font-medium">Candidate shortlisting</span></div>
                         </div>
                     </div>
                 </div>
