--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <meta name="author" content="Maged Yousry">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://staffona.com/">
+    <link rel="canonical" href="https://www.staffona.com/" />
     
     <!-- Open Graph (Facebook / LinkedIn) -->
     <meta property="og:type" content="website">
