--- a/careers.html
+++ b/careers.html
@@ -400,7 +400,7 @@
 <script>
   // Application form uses a SEPARATE Formspree endpoint for career applications
   // Create a second form at formspree.io and update CAREERS_FORMSPREE_ID
-  const CAREERS_FORMSPREE_ID = 'xreajrkr'; // ← Replace with a careers-specific Formspree form ID (free)
+  const CAREERS_FORMSPREE_ID = 'xreajrkr'; // same endpoint — Formspree routes by _subject
   
   document.getElementById('applyForm').addEventListener('submit', async function(e) {
     e.preventDefault();
