--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 <link rel="stylesheet" href="/style.css">
 <style>
 /* Homepage-specific styles */
-:root{--nav-h:70px}
+:root{
+  --nav-h:70px;
+  --border:var(--bd);--slate:var(--sl);--slate-l:var(--sll);--text:var(--tx);
+  --navy-m:var(--nvm);--navy-lt:var(--nvl);--gold-lt:var(--glt);--gold-pl:var(--gpl);
+  --sh1:var(--s1);--sh2:var(--s2);--sh3:var(--s3);--sh4:var(--s4);--sh5:var(--s5);
+}
 .hero{background:var(--navy);min-height:100vh;display:flex;align-items:center;position:relative;overflow:hidden;padding-top:var(--nav-h)}
 .hgrid{position:absolute;inset:0;background-image:linear-gradient(rgba(200,151,58,.042) 1px,transparent 1px),linear-gradient(90deg,rgba(200,151,58,.042) 1px,transparent 1px);background-size:54px 54px;pointer-events:none}
 .hglow{position:absolute;width:800px;height:800px;border-radius:50%;background:radial-gradient(circle,rgba(200,151,58,.09) 0%,transparent 65%);top:-200px;right:-120px;pointer-events:none}
@@ -220,6 +225,46 @@
 </style>
 </head>
 <body>
+
+<!-- NAV -->
+<div class="nav-wrap" id="navbar">
+  <div class="w"><nav class="nav-in" aria-label="Main">
+    <a href="/" class="nav-logo"><img src="/Logo.png" alt="Staffona" onerror="this.style.display='none';this.nextElementSibling.style.display='block'"><span class="nlf">Staff<em>ona</em></span></a>
+    <ul class="nav-links">
+      <li><a href="/" class="active">Home</a></li>
+      <li class="ndrop"><a href="/services.html">Services ▾</a>
+        <div class="ndrop-menu">
+          <a href="/hr-outsourcing.html">HR Outsourcing</a>
+          <a href="/payroll-egypt.html">Payroll Management</a>
+          <a href="/recruitment-egypt.html">Recruitment</a>
+          <a href="/compliance.html">HR Compliance</a>
+          <a href="/services.html">All Services →</a>
+        </div>
+      </li>
+      <li><a href="/resources.html">Resources</a></li>
+      <li><a href="/laws.html">Laws &amp; Guides</a></li>
+      <li><a href="/careers.html">Careers</a></li>
+      <li><a href="/about.html">About</a></li>
+    </ul>
+    <div class="nav-r">
+      <a href="mailto:info@staffona.com" class="nav-email">info@staffona.com</a>
+      <button class="dm-btn" aria-label="Toggle dark mode">
+        <svg class="dm-moon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/></svg>
+        <svg class="dm-sun" style="display:none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/></svg>
+      </button>
+      <button class="btn btn-gold btn-sm" data-cal>Book Consultation</button>
+      <button class="hbg" id="hbg" aria-label="Menu" aria-expanded="false" style="display:none"><span></span><span></span><span></span></button>
+    </div>
+  </nav></div>
+</div>
+<nav class="mob-nav" id="mobNav">
+  <a href="/">Home</a><a href="/services.html">Services</a><a href="/hr-outsourcing.html">HR Outsourcing</a>
+  <a href="/payroll-egypt.html">Payroll</a><a href="/recruitment-egypt.html">Recruitment</a>
+  <a href="/resources.html">Resources</a><a href="/laws.html">Laws</a>
+  <a href="/careers.html">Careers</a><a href="/about.html">About</a>
+  <a href="mailto:info@staffona.com" style="color:var(--gold)">info@staffona.com</a>
+  <div style="padding-top:12px"><button class="btn btn-gold" style="width:100%;justify-content:center" data-cal>Book Free Consultation</button></div>
+</nav>
 
 <section class="hero" id="home">
   <div class="hgrid"></div><div class="hglow"></div><div class="hglow2"></div>
@@ -484,6 +529,53 @@
   </div>
 </section>
 
+<footer class="footer"><div class="w">
+  <div class="ftg">
+    <div class="flb">
+      <a href="/"><img src="/Logo.png" alt="Staffona" onerror="this.style.display='none';this.nextElementSibling.style.display='block'"><span class="flb-fb">Staff<em>ona</em></span></a>
+      <p>Egypt's trusted HR outsourcing and recruitment consultancy. Based in Alexandria, serving international and Egyptian businesses.</p>
+      <a href="mailto:info@staffona.com" class="flci"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>info@staffona.com</a>
+      <a href="https://maps.google.com/?q=El-Horreya+Street+Mostafa+Kamel+Alexandria+Egypt" target="_blank" rel="noopener" class="flci"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>El-Horreya St, Mostafa Kamel, Alexandria, Egypt</a>
+      <a href="https://www.linkedin.com/company/staffona" target="_blank" rel="noopener" class="flci"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-4 0v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>LinkedIn — Staffona</a>
+    </div>
+    <div><div class="flct">Services</div><ul class="flls">
+      <li><a href="/hr-outsourcing.html">HR Outsourcing</a></li>
+      <li><a href="/payroll-egypt.html">Payroll Management</a></li>
+      <li><a href="/recruitment-egypt.html">Recruitment</a></li>
+      <li><a href="/compliance.html">HR Compliance</a></li>
+      <li><a href="/services.html">All Services</a></li>
+    </ul></div>
+    <div><div class="flct">Resources</div><ul class="flls">
+      <li><a href="/resources/hiring-guide.html">Egypt Hiring Guide</a></li>
+      <li><a href="/resources/payroll-taxes.html">Payroll Tax Guide</a></li>
+      <li><a href="/resources/gcc-hiring.html">GCC Hiring Guide</a></li>
+      <li><a href="/laws.html">Egyptian Labor Laws</a></li>
+      <li><a href="/resources.html">All Resources →</a></li>
+    </ul></div>
+    <div><div class="flct">Company</div><ul class="flls">
+      <li><a href="/about.html">About Staffona</a></li>
+      <li><a href="/careers.html">Careers</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="/privacy.html">Privacy Policy</a></li>
+      <li><a href="/terms.html">Terms of Service</a></li>
+    </ul></div>
+  </div>
+  <div class="ftbtm">
+    <div>
+      <div class="ftcopy">© 2026 Staffona. All rights reserved. El-Horreya St, Mostafa Kamel, Alexandria, Egypt.</div>
+      <p class="ftdisc">Staffona provides HR consultancy, payroll administration, and recruitment services. All managed employment arrangements are structured as HR outsourcing engagements in accordance with applicable Egyptian law.</p>
+    </div>
+    <div class="ftbl"><a href="/privacy.html">Privacy</a><a href="/terms.html">Terms</a><a href="/sitemap.xml">Sitemap</a></div>
+  </div>
+</div></footer>
+<div class="cookie" id="cookieBanner">
+  <p>We use cookies to improve your experience. <a href="/privacy.html">Learn more</a></p>
+  <div class="cb-btns">
+    <button class="btn btn-gold btn-sm" id="cookieAccept">Accept</button>
+    <button style="background:transparent;border:1px solid rgba(255,255,255,.2);color:rgba(255,255,255,.4);border-radius:var(--r);padding:7px 15px;font-size:13px;cursor:pointer" id="cookieDecline">Decline</button>
+  </div>
+</div>
+<button class="btt" id="btt" aria-label="Back to top"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="12" y1="19" x2="12" y2="5"/><polyline points="5,12 12,5 19,12"/></svg></button>
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <script async src="https://assets.calendly.com/assets/external/widget.js"></script>
 <script src="/shared.js"></script>
